test/error/sema/enum-assign-variant.dsk
enum S
    A
    B
end

S.A = 42
